SCSS Fixed m-office & m-people images not being cropped with border-radius

--- a/app/src/scss/modules/m-offices.scss
+++ b/app/src/scss/modules/m-offices.scss
@@ -86,7 +86,9 @@
 
     background-color: $c-grey--800;
 
-    overflow: hidden;
+    &, img {
+      overflow: hidden;
+    }
   }
 
   &__name {
