--- a/app/src/scss/modules/m-people.scss
+++ b/app/src/scss/modules/m-people.scss
@@ -85,6 +85,8 @@
 
   &__portrait {
     position: absolute;
+
+    border-radius: 50%;
   }
 
   &__name {
